; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_revparse.c_maybe_describe.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_revparse.c_maybe_describe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"-g\00", align 1
@GIT_ENOTFOUND = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [24 x i8] c".+-[0-9]+-g[0-9a-fA-F]+\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i32*, i8*)* @maybe_describe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @maybe_describe(i32** %0, i32* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32** %0, i32*** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = call i8* @strstr(i8* %11, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i8* %12, i8** %8, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = icmp eq i8* %13, null
  br i1 %14, label %15, label %17

15:                                               ; preds = %3
  %16 = load i32, i32* @GIT_ENOTFOUND, align 4
  store i32 %16, i32* %4, align 4
  br label %35

17:                                               ; preds = %3
  %18 = call i64 @build_regex(i32* %10, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0))
  %19 = icmp slt i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %17
  store i32 -1, i32* %4, align 4
  br label %35

21:                                               ; preds = %17
  %22 = load i8*, i8** %7, align 8
  %23 = call i32 @git_regexp_match(i32* %10, i8* %22)
  store i32 %23, i32* %9, align 4
  %24 = call i32 @git_regexp_dispose(i32* %10)
  %25 = load i32, i32* %9, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %21
  %28 = load i32, i32* @GIT_ENOTFOUND, align 4
  store i32 %28, i32* %4, align 4
  br label %35

29:                                               ; preds = %21
  %30 = load i32**, i32*** %5, align 8
  %31 = load i32*, i32** %6, align 8
  %32 = load i8*, i8** %8, align 8
  %33 = getelementptr inbounds i8, i8* %32, i64 2
  %34 = call i32 @maybe_abbrev(i32** %30, i32* %31, i8* %33)
  store i32 %34, i32* %4, align 4
  br label %35

35:                                               ; preds = %29, %27, %20, %15
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i8* @strstr(i8*, i8*) #1

declare dso_local i64 @build_regex(i32*, i8*) #1

declare dso_local i32 @git_regexp_match(i32*, i8*) #1

declare dso_local i32 @git_regexp_dispose(i32*) #1

declare dso_local i32 @maybe_abbrev(i32**, i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
